@@ -1,3 +1,11 @@
+Thu May 26 13:11:19 UTC 2011  Marcel Smit  <msmit@remedy.nl>
+
+        * tao/Generic_Sequence_T.h:
+          Added file name to doxygen documentation
+
+        * tests/Sequence_Unit_Tests/value_sequence_tester.hpp:
+          Resolved Coverity warning: catching a uncaught BAD_PARAM exception.
+
 Fri May 20 22:07:56 UTC 2011  Adam Mitz  <mitza@ociweb.com>
 
         * tao/AnyTypeCode/TAO_AnyTypeCode.rc:
